language/move-lang/tests/move_check/typing/module_call_wrong_arity.exp
error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:27:9
   │
27 │         X::foo(1);
   │         ^^^^^^^^^
   │         │     │
   │         │     Found 1 argument(s) here
   │         Invalid call of '0x2::X::foo'. The call expected 0 argument(s) but got 1

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:28:9
   │
28 │         X::foo(1, 2);
   │         ^^^^^^^^^^^^
   │         │     │
   │         │     Found 2 argument(s) here
   │         Invalid call of '0x2::X::foo'. The call expected 0 argument(s) but got 2

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:29:9
   │
29 │         X::bar();
   │         ^^^^^^^^
   │         │     │
   │         │     Found 0 argument(s) here
   │         Invalid call of '0x2::X::bar'. The call expected 1 argument(s) but got 0

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:30:9
   │
30 │         X::bar(1, 2);
   │         ^^^^^^^^^^^^
   │         │     │
   │         │     Found 2 argument(s) here
   │         Invalid call of '0x2::X::bar'. The call expected 1 argument(s) but got 2

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:31:9
   │
31 │         X::baz<u64, u64>();
   │         ^^^^^^^^^^^^^^^^^^
   │         │               │
   │         │               Found 0 argument(s) here
   │         Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 0

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:32:9
   │
32 │         X::baz<u64, u64>(1);
   │         ^^^^^^^^^^^^^^^^^^^
   │         │               │
   │         │               Found 1 argument(s) here
   │         Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 1

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:33:9
   │
33 │         X::baz(1, 2, 3);
   │         ^^^^^^^^^^^^^^^
   │         │     │
   │         │     Found 3 argument(s) here
   │         Invalid call of '0x2::X::baz'. The call expected 2 argument(s) but got 3

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:37:9
   │
37 │         foo(1);
   │         ^^^^^^
   │         │  │
   │         │  Found 1 argument(s) here
   │         Invalid call of '0x2::M::foo'. The call expected 0 argument(s) but got 1

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:38:9
   │
38 │         foo(1, 2);
   │         ^^^^^^^^^
   │         │  │
   │         │  Found 2 argument(s) here
   │         Invalid call of '0x2::M::foo'. The call expected 0 argument(s) but got 2

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:39:9
   │
39 │         bar();
   │         ^^^^^
   │         │  │
   │         │  Found 0 argument(s) here
   │         Invalid call of '0x2::M::bar'. The call expected 1 argument(s) but got 0

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:40:9
   │
40 │         bar(1, 2);
   │         ^^^^^^^^^
   │         │  │
   │         │  Found 2 argument(s) here
   │         Invalid call of '0x2::M::bar'. The call expected 1 argument(s) but got 2

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:41:9
   │
41 │         baz<u64, u64>();
   │         ^^^^^^^^^^^^^^^
   │         │            │
   │         │            Found 0 argument(s) here
   │         Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 0

error[E04016]: too few arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:42:9
   │
42 │         baz<u64, u64>(1);
   │         ^^^^^^^^^^^^^^^^
   │         │            │
   │         │            Found 1 argument(s) here
   │         Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 1

error[E04017]: too many arguments
   ┌─ tests/move_check/typing/module_call_wrong_arity.move:43:9
   │
43 │         baz(1, 2, 3);
   │         ^^^^^^^^^^^^
   │         │  │
   │         │  Found 3 argument(s) here
   │         Invalid call of '0x2::M::baz'. The call expected 2 argument(s) but got 3

